examples/pl011/evaluation/with_constraints/pl011_reset/test000001.ptr.err
Error: memory error: null page access
File: ../hw/char/pl011.c
Line: 647
assembly.ll line: 1245
State: 1
Stack: 
	#000001245 in main_pl011_reset() at ../hw/char/pl011.c:647
Info: 
	address: 1104
	next: object at 138909374181376 of size 1344
		MO176[1344] allocated at main_pl011_reset():  %1 = alloca %struct.PL011State, align 16
